--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
     <script type="text/Javascript" src="./js/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <p id="info"></p>
+  </body>
 </html>
