--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script type="text/Javascript" src="./js/main.js" defer></script>
   </head>
   <body>
-    <p id="info"></p>
+    <h1 style="color: red" id="info"></h1>
   </body>
 </html>
